--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
+# Ignore Terraform local folders anywhere
+**/.terraform/
+
+# Ignore state files
 *.tfstate
 *.tfstate.*
+*.backup
+crash.log
+
+# Sensitive variables
+env/dev/.terraform/providers/registry.terraform.io/hashicorp/azurerm/3.117.1/darwin_arm64/terraform-provider-azurerm_v3.117.1_x5
