--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,4 @@ crash.log
 
 # Sensitive variables
 env/dev/.terraform/providers/registry.terraform.io/hashicorp/azurerm/3.117.1/darwin_arm64/terraform-provider-azurerm_v3.117.1_x5
-.terraform
+.terraform/providers/registry.terraform.io/hashicorp/azurerm/3.117.1/darwin_arm64/terraform-provider-azurerm_v3.117.1_x5
